--- a/src/index.less
+++ b/src/index.less
@@ -1,13 +1,8 @@
 body {
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	margin: 0;
 	overflow: hidden;
-}
-
-#main {
-	width: 100%;
-	height: 100%;
 }
 
 .container {
