--- a/src/index.less
+++ b/src/index.less
@@ -11,5 +11,11 @@ body {
 	> canvas {
 		width: 100%;
 		height: 100%;
+		background-color: #404040;
+		background-image: linear-gradient(45deg, #808080 25%, transparent 25%),
+			linear-gradient(-45deg, #808080 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #808080 75%),
+			linear-gradient(-45deg, transparent 75%, #808080 75%);
+		background-size: 32px 32px;
+		background-position: 0 0, 0 16px, 16px -16px, -16px 0px;
 	}
 }
